Fix missing color

--- a/public/stylesheets/medic/medicStyles.less
+++ b/public/stylesheets/medic/medicStyles.less
@@ -1425,6 +1425,9 @@ body {
       border-radius: 0px;
     }
   }
+  .customGreen{
+    color: #01877C;
+  }
 
   .productPageMenu {
     .parent {
